Prevent header title wrapping

--- a/client/src/Header.module.css
+++ b/client/src/Header.module.css
@@ -1,5 +1,7 @@
 .home {
   color: black;
+  flex-shrink: 1;
+  min-width: 0;
   &:hover {
     text-decoration: none;
   }
@@ -12,6 +14,8 @@
   font-size: 1.125rem;
   font-weight: 600;
   line-height: 1.5;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .home__subtitle {
